[gd_scene load_steps=5 format=3 uid="uid://bw50duke2sjdh"]

[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="1_cy2ud"]
[ext_resource type="PackedScene" uid="uid://fnria6l1edd" path="res://Scenes/UI/TopBarUI.tscn" id="2_8qdku"]
[ext_resource type="PackedScene" uid="uid://bmlekmblh5hw2" path="res://Scenes/UI/main_menu.tscn" id="2_vhtvj"]
[ext_resource type="PackedScene" uid="uid://cqbmkt2w43jhl" path="res://Scenes/UI/end_screen.tscn" id="3_uw5lp"]

[node name="UI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_cy2ud")

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 16

[node name="TopBarUI" parent="MarginContainer" instance=ExtResource("2_8qdku")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PauseCenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PauseMenuPanel" type="Panel" parent="MarginContainer/PauseCenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseCenterContainer/PauseMenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PauseLabel" type="Label" parent="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"

[node name="ContinueButton" type="Button" parent="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="RestartButton" type="Button" parent="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Quit Game"

[node name="EndScreenContainer" type="CenterContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="EndScreen" parent="MarginContainer/EndScreenContainer" instance=ExtResource("3_uw5lp")]
unique_name_in_owner = true
layout_mode = 2

[node name="MainMenu" parent="." instance=ExtResource("2_vhtvj")]
unique_name_in_owner = true

[connection signal="button_up" from="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="MarginContainer/PauseCenterContainer/PauseMenuPanel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
